# Homework-3

./: .editorconfig  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  Makefile  README.md  Readme2.md  all_results.txt  app  batch.sh  case_0.txt  case_1.txt  case_2.txt  case_3.txt  case_4.txt  case_5.txt  case_6.txt  case_7.txt  case_8.txt  case_9.txt  check_data.sh  cmake_install.cmake  compare_results.cpp  homework3.ipynb  main  main.cu  main_no_error_check.cu  matmul  matmul_4590327.err  matmul_4590327.out  matmul_app  matmul_app.txt  matmul_app_16_tilesize.txt  matmul_app_32_tilesize.txt  matmul_app_complete.txt  matmul_app_v2.txt  matrix_mult  matrix_mult.cu  naive_gpu.out  notes.txt  (+19 more)
assignment2file/: main.cpp
data/0/: result.raw  result_naive.raw  result_tiled.raw  result_tiled_cuda.raw  tiled_cuda.raw
data/1/: result.raw  result_tiled.raw  result_tiled_cuda.raw
data/2/: result.raw  result_naive.raw  result_tiled.raw  result_tiled_cuda.raw
data/3/: result.raw  result_naive_cuda.raw  result_tiled.raw  result_tiled_cuda.raw
data/4/: result.raw  result_naive.raw  result_naive_cuda.raw  result_tiled.raw
data/5/: result.raw  result_naive.raw  result_tiled.raw  result_tiled_cuda.raw
data/6/: result.raw  result_naive.raw  result_naive_cuda.raw  result_tiled.raw
data/7/: result.raw  result_naive.raw  result_naive_cuda.raw  result_tiled.raw  result_tiled_cuda.raw
data/8/: result.raw  result_naive.raw  result_tiled.raw  result_tiled_cuda.raw
data/9/: result.raw  (+4 more)
results/: results-assignment2.csv  results-assignment3.csv  results.ipynb  results.txt
(+10 files in other folders)
